# honeypot-mcp

./: .env.example  .gitignore  Dockerfile  README.md  analytics.py  llm_client.py  prompts.py  pyproject.toml  server.py  smithery.yaml  smithery_config.js
